--- a/AUTHORS
+++ b/AUTHORS
@@ -1,18 +1,20 @@
-icewm -- authors file.  2019-08-18
+icewm -- authors file.  2019-08-22
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Author: Thomas Koller <tk120@protonmail.com>
+Author: jcsl <trcs@gmx.com>
+Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
+Author: Sarah Kriesch <ada.lovelace@gmx.de>
+Author: Ferdinand Galko <galko.ferdinand@gmail.com>
+Author: scootergrisen <scootergrisen@gmail.com>
 Author: Aleš Kastner <alkas@volny.cz>
+Author: Thomas Koller <tk120@protonmail.com>
 Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
 Author: David Medina <medipas@gmail.com>
 Author: Eduard Bloch <blade@debian.org>
 Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
 Author: Yi-Jyun Pan <pan93412@gmail.com>
-Author: scootergrisen <scootergrisen@gmail.com>
 Author: Brian Bidulock <bidulock@openss7.org>
-Author: Sarah Kriesch <ada.lovelace@gmx.de>
 Author: Olga Smirnova <mistresssilvara@hotmail.com>
-Author: Ferdinand Galko <galko.ferdinand@gmail.com>
 Author: Freek de Kruijf <freek@opensuse.org>
 Author: openSUSE Weblate <weblate-noreply@opensuse.org>
 Author: mohammad alhargan <malham1@gmail.com>
@@ -35,7 +37,6 @@ Author: Dmitriy Khanzhin <dmitriy.khanzhin@gmail.com>
 Author: Dingzhong Chen <wsxy162@gmail.com>
 Author: Code7R <Code7R@users.noreply.github.com>
 Author: Benny Siegert <bsiegert@gmail.com>
-Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
 Author: YunSeok Choi <xein@naver.com>
 Author: varmanishant <nishant.varma@gmail.com>
 Author: Brian Bidulock <bidulock@openss7.com>
