--- a/man/icewm-session.pod
+++ b/man/icewm-session.pod
@@ -27,7 +27,7 @@ Let IceWM load preferences from I<FILE>.
 
 =item B<-t>, B<--theme=FILE>
 
-Let IceWM load the theme from I<FILE>.
+Let IceWM load the theme I<FILE>.
 
 =item B<-i>, B<--icewm=FILE>
 
@@ -80,6 +80,31 @@ Print the program version to F<stdout> and exit.
 Print copying permissions to F<stdout> for the program and exit.
 
 =back
+
+=head1 USAGE
+
+On startup icewm-session executes the following steps.
+From the file F<env> in the user configuration directory
+it loads additional environment variables, if that file exists.
+Then it will start F<icewmbg> to manage root background colors and images.
+It may also start F<icesound>, if this was enabled at configuration time.
+Then F<icewm> is started.
+
+If there exists an executable script F<startup> in the user configuration
+directory, it will be executed. It may contain commands to initialize X11
+settings with F<xset>, load keyboard configuration, start a compositing
+manager like F<compton> and load system tray applications.
+
+When icewm exits or is told to exit, icewm-session will execute
+a F<shutdown> script, if it exists in the user configuration directory.
+When this finishes, icewm-session will terminate icewm, icewmbg
+and icesound. Finally icewm-session will exit.
+
+If the icewm process crashes then icewm-session will attempt to restart
+it. If two such crashes occur in a short period, then icewm-session will
+attempt to popup a dialog using either F<xmessage>, F<kdialog> or
+F<zenity>.  This dialog asks if the user wishes to continue restarting
+icewm or abort execution of icewm-session.
 
 =head1 BUGS
 
